refactor: api -> graph -> rpc -> service (#13)
* wip

* refactor(api): use graphql

- remove service
- add logging transport middleware found by cited reference

* build: generating graph client & server is still rough

* refactor(cli): rename fn

* feat(graph): article & feed crud

* feat(rpc): get feed

* chore: regenerate openapi clients

note: changed create/update response type

* fix: errors from refactor

* fix: ignore generated code
